--- a/Artivity.Journal.Windows/Artivity.Journal.Windows.csproj
+++ b/Artivity.Journal.Windows/Artivity.Journal.Windows.csproj
@@ -147,6 +147,12 @@
   <ItemGroup>
     <Resource Include="Icon.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Artivity.Apid.Modules.Journal\Artivity.Apid.Modules.Journal.csproj">
+      <Project>{ebeaf1ee-acd3-4124-a8e4-314822824ec8}</Project>
+      <Name>Artivity.Apid.Modules.Journal</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\cef.redist.x86.3.2526.1362\build\cef.redist.x86.targets" Condition="Exists('..\packages\cef.redist.x86.3.2526.1362\build\cef.redist.x86.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
