WebView in Artivity Journal is now allowed to load pages from unencrypted HTTP.

--- a/Artivity.Journal.Mac/Info.plist
+++ b/Artivity.Journal.Mac/Info.plist
@@ -28,5 +28,10 @@
 	<string>Main</string>
 	<key>CFBundleIconFile</key>
 	<string>Icons.icns</string>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
