--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -25,7 +25,7 @@
     <DefineConstants>WIN</DefineConstants>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug OSX|AnyCPU' ">
-    <Optimize>false</Optimize>
+    <Optimize>true</Optimize>
     <OutputPath>bin\Debug_OSX</OutputPath>
     <WarningLevel>4</WarningLevel>
     <Commandlineparameters>-l log.config</Commandlineparameters>
