Adapted file system monitor to watch in root directories only, as this is the only supported option on Mac OS X.

--- a/Artivity.Apid.Mac/Artivity.Apid.Mac.csproj
+++ b/Artivity.Apid.Mac/Artivity.Apid.Mac.csproj
@@ -32,6 +32,7 @@
     <PackageSigningKey>Developer ID Installer</PackageSigningKey>
     <XamMacArch>x86_64</XamMacArch>
     <Externalconsole>true</Externalconsole>
+    <ConsolePause>false</ConsolePause>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
