--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -53,9 +53,6 @@
     <Reference Include="Nancy.Hosting.Self">
       <HintPath>..\packages\Nancy.Hosting.Self.1.4.1\lib\net40\Nancy.Hosting.Self.dll</HintPath>
     </Reference>
-    <Reference Include="Nancy.Serialization.JsonNet">
-      <HintPath>..\packages\Nancy.Serialization.JsonNet.1.4.1\lib\net40\Nancy.Serialization.JsonNet.dll</HintPath>
-    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Numerics" />
@@ -149,6 +146,9 @@
     <Compile Include="Helpers\IFileSystemWatcher.cs" />
     <Compile Include="Helpers\FileSystemWatcherFactory.cs" />
     <Compile Include="Helpers\DefaultFileSystemWatcher.cs" />
+    <Compile Include="Helpers\JsonNetBodyDeserializer.cs" />
+    <Compile Include="Helpers\JsonNetSerializer.cs" />
+    <Compile Include="Helpers\NancyHelpers.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
