--- a/Artivity.Journal.Windows/packages.config
+++ b/Artivity.Journal.Windows/packages.config
@@ -5,4 +5,5 @@
   <package id="CefSharp.Common" version="47.0.3" targetFramework="net40" />
   <package id="CefSharp.Wpf" version="47.0.3" targetFramework="net40" />
   <package id="ModernUI.WPF" version="1.0.9" targetFramework="net40" />
+  <package id="Nancy" version="1.4.3" targetFramework="net40" />
 </packages>
