--- a/Artivity.Mac/Info.plist
+++ b/Artivity.Mac/Info.plist
@@ -6,8 +6,6 @@
 	<string>Artivity</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.semiodesk.artivity</string>
-	<key>CFBundleShortVersionString</key>
-	<string>1.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
@@ -21,7 +19,7 @@
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>NSHumanReadableCopyright</key>
-	<string>Semiodesk GmbH</string>
+	<string>© 2016 Semiodesk GmbH </string>
 	<key>NSPrincipalClass</key>
 	<string>NSApplication</string>
 	<key>NSMainStoryboardFile</key>
@@ -35,5 +33,7 @@
 	</dict>
 	<key>LSApplicationCategoryType</key>
 	<string>public.app-category.graphics-design</string>
+	<key>CFBundleShortVersionString</key>
+	<string>1.6.0</string>
 </dict>
 </plist>
