--- a/artivity-extension-chromium/manifest.json
+++ b/artivity-extension-chromium/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 2,
 
   "name": "Artivity",
-  "description": "This extension captures the webpages you visit in the Zeigeist log.",
+  "description": "This extension captures the webpages you visit in the Artivity log.",
   "version": "1.5.0",
 
   "icons": { "16": "icon16.png",
@@ -19,6 +19,6 @@
   },
 
   "permissions": [
-    "tabs", "activeTab", "http://localhost/", "http://localhost:8272/"
+    "tabs", "activeTab", "http://localhost/", "http://localhost:8262/"
   ]
 }
