Apid gets restarted if necessary. Also shuts down for update process.

--- a/Artivity.Mac/Artivity.Mac.csproj
+++ b/Artivity.Mac/Artivity.Mac.csproj
@@ -90,6 +90,7 @@
     <Compile Include="Apid\FSEventsFileSystemWatcher.cs" />
     <Compile Include="Apid\MacPlatformProvider.cs" />
     <Compile Include="Apid\Program.cs" />
+    <Compile Include="Journal\SparkleDelegate.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Journal\Main.storyboard" />
