Bugfix: Fixed wrong thumbnail folder name in Illustrator plugin.

--- a/Artivity.DataModel/Artivity.DataModel.csproj
+++ b/Artivity.DataModel/Artivity.DataModel.csproj
@@ -109,6 +109,7 @@
     </None>
     <None Include="Ontologies\nie.rdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="Ontologies\foaf.rdf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
