--- a/Artivity.Apid.Windows/debug.log.config
+++ b/Artivity.Apid.Windows/debug.log.config
@@ -1,6 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net>
-
   <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
     <mapping>
       <level value="ERROR" />
@@ -8,11 +7,9 @@
       <backColor value="Red, HighIntensity" />
     </mapping>
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      <conversionPattern value="%date [%-5level] - %message%newline" />
     </layout>
   </appender>
-  
-
   <root>
     <level value="All" />
     <appender-ref ref="ColoredConsoleAppender" />
