--- a/Artivity.Mac/debug.log.config
+++ b/Artivity.Mac/debug.log.config
@@ -1,20 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <log4net>
-
-  <appender name="ColoredConsoleAppender" type="log4net.Appender.ColoredConsoleAppender">
-    <mapping>
-      <level value="ERROR" />
-      <foreColor value="White" />
-      <backColor value="Red, HighIntensity" />
-    </mapping>
+  <appender name="ConsoleAppender" type="log4net.Appender.ConsoleAppender">
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+        <conversionPattern value="%date [%-5level] - %message%newline" />
     </layout>
   </appender>
-  
-
   <root>
     <level value="All" />
-    <appender-ref ref="ColoredConsoleAppender" />
+    <appender-ref ref="ConsoleAppender" />
   </root>
 </log4net>
