--- a/Artivity.Mac/log.config
+++ b/Artivity.Mac/log.config
@@ -8,7 +8,7 @@
     <maximumFileSize value="500KB" />
     <staticLogFileName value="true" />
     <layout type="log4net.Layout.PatternLayout">
-      <conversionPattern value="%date [%thread] %-5level %logger - %message%newline" />
+      <conversionPattern value="%date [%-5level] - %message%newline" />
     </layout>
   </appender>
   <root>
