Added missing files to Journal module.

--- a/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
+++ b/Artivity.Apid.Modules.Journal/Artivity.Apid.Modules.Journal.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="app\js\color-thief.min.js" />
+    <None Include="app\js\quantize.js" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\img\heart-broken.svg" />
