--- a/Artivity.Mac/Info.plist
+++ b/Artivity.Mac/Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleName</key>
 	<string>Artivity Journal</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.semiodesk.artivity</string>
+	<string>com.semiodesk.artivity-journal</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
 	<key>LSMinimumSystemVersion</key>
