--- a/Artivity.Journal.Mac/com.semiodesk.artivity.plist
+++ b/Artivity.Journal.Mac/com.semiodesk.artivity.plist
@@ -8,9 +8,9 @@
 	<string>com.semiodesk.artivity</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>{0}/plugins/artivity-apid.app/Contents/MacOS/artivity-apid</string>
+		<string>{0}/Plugins/artivity-apid.app/Contents/MacOS/artivity-apid</string>
 	</array>
 	<key>WorkingDirectory</key>
-	<string>{0}/Plugins/</string>
+	<string>{0}/Plugins/artivity-apid.app/Contents/Resources</string>
 </dict>
 </plist>
