--- a/Artivity.Journal.Mac/com.semiodesk.artivity.plist
+++ b/Artivity.Journal.Mac/com.semiodesk.artivity.plist
@@ -11,6 +11,6 @@
 		<string>{0}/Plugins/artivity-apid.app/Contents/MacOS/artivity-apid</string>
 	</array>
 	<key>WorkingDirectory</key>
-	<string>{0}/Plugins/artivity-apid.app/Contents/Resources</string>
+	<string>{0}/Applications/artivity-apid.app/Contents/Resources</string>
 </dict>
 </plist>
