Refactored automatic plugin installation mechanism. Added PluginModule to API.

--- a/Artivity.Apid.Windows/Artivity.Apid.Windows.csproj
+++ b/Artivity.Apid.Windows/Artivity.Apid.Windows.csproj
@@ -101,5 +101,7 @@
   </Target>
   <Target Name="AfterBuild">
   </Target>
-  -->
+    -->
+	  <Import Project="$(ProjectDir)\CopyToOutput.targets" />
+
 </Project>
