--- a/Artivity.Apid/Artivity.Apid.csproj
+++ b/Artivity.Apid/Artivity.Apid.csproj
@@ -108,12 +108,14 @@
     <Compile Include="HttpService.cs" />
     <Compile Include="Helpers\FileSystemWatcherInfo.cs" />
     <Compile Include="Modules\ApiModule.cs" />
+    <Compile Include="Modules\PluginModule.cs" />
     <Compile Include="Parameters\ActivityParameters.cs" />
     <Compile Include="Platforms\IPlatformProvider.cs" />
     <Compile Include="Platforms\OSX\ThumbnailProvider.cs" />
     <Compile Include="Platforms\IThumbnailProvider.cs" />
     <Compile Include="Platforms\Win\ThumbnailProvider.cs" />
     <Compile Include="Platforms\PlatformProvider.cs" />
+    <Compile Include="Plugin\SoftwareAgentPlugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Modules\ModuleBase.cs" />
     <Compile Include="Parameters\AgentParameters.cs" />
@@ -151,7 +153,9 @@
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
     <None Include="Accounts\Accounts.cd" />
-    <None Include="app.config" />
+    <None Include="app.config">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="Makefile" />
     <None Include="COPYING" />
     <None Include="packages.config">
