Fixed wrong parameter in com.semiodesk.artivity.plist. Improved APID test in Artivity.Journal.Mac to detect changed launch agent files by comparing the  size of the distributed and the installed files.

--- a/Artivity.Journal.Mac/com.semiodesk.artivity.plist
+++ b/Artivity.Journal.Mac/com.semiodesk.artivity.plist
@@ -8,7 +8,7 @@
 	<string>com.semiodesk.artivity</string>
 	<key>ProgramArguments</key>
 	<array>
-		<string>{0}/Plugins/artivity-apid.app/Contents/MacOS/artivity-apid</string>
+		<string>{0}/Applications/artivity-apid.app/Contents/MacOS/artivity-apid</string>
 	</array>
 	<key>WorkingDirectory</key>
 	<string>{0}/Applications/artivity-apid.app/Contents/Resources</string>
